--- a/src/en/guide/plugins/creatingAndInstallingPlugins.adoc
+++ b/src/en/guide/plugins/creatingAndInstallingPlugins.adoc
@@ -154,7 +154,7 @@ Within the `build.gradle` of the application declare a dependency on the plugin 
 ----
 grails {
     plugins {
-        compile project(':myplugin')
+        project(':myplugin')
     }
 }
 ----
